<resources>
    <!-- Google maps API key  -->
    <string name="google_map_api_key">AIzaSyAQqlJjDrGj8h4Gggid1UXDPPc9FqbBVs0</string>

    <!-- Firestore -->
    <string name="collection_users">Users</string>
    <string name="collection_events">Events</string>


    <string name="app_name">FindYourRPG</string>
    <string name="login">Login</string>
    <string name="toast_default">Click</string>
    <string name="option_looking">Find Games</string>
    <string name="option_create">Create Zone</string>
    <string name="option_find_player">Find player</string>
    <string name="option_participate">Participating</string>
    <string name="option_organized">Organized</string>
    <string name="option_participated">Participated</string>
    <string name="option_profile">Profile</string>
    <string name="option_logout">Logout</string>
    <string name="option_library">Library</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="placeholder">placeholder</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fringilla consequat dui at vestibulum. Sed ut nisi vitae mi pellentesque mollis at id leo.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fringilla consequat dui at vestibulum. Sed ut nisi vitae mi pellentesque mollis at id leo. Morbi purus quam, interdum id risus id, porttitor ornare enim. Fusce consequat vulputate pellentesque.</string>
    <string name="lorem_ipsum_long">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fringilla consequat dui at vestibulum. Sed ut nisi vitae mi pellentesque mollis at id leo. Morbi purus quam, interdum id risus id, porttitor ornare enim. Fusce consequat vulputate pellentesque. Ut risus libero, malesuada ut feugiat eget, lobortis ut odio. Etiam elit ante, ullamcorper sed sollicitudin eu, convallis at ex. Ut pretium lacus quam, ut scelerisque nisl accumsan vitae.</string>
    <string name="login_register">Register</string>
    <string name="form_set_date">Set date</string>
    <string name="form_set_time">Set time</string>
    <string name="distance_unit">km</string>


    <!-- Event details dialogs -->

    <!-- Normal dialog without user -->
    <string name="event_dialog_possitive">Join</string>
    <string name="event_dialog_negative">Decline</string>

    <!-- Dialog with user on list -->
    <string name="event_dialog_possitive_onList">Leave event</string>
    <string name="event_dialog_negative_onList">Close</string>

    <!-- Full list -->
    <string name="event_dialog_possitive_fullList">Leave</string>
    <string name="event_dialog_negative_fullList">Close</string>

    <!-- end of Event details dialogs -->


    <!--Game systems-->
    <string name="system_dnd">Dungeon and Dragons</string>
    <string name="system_warhammer">Warhammer</string>
    <string name="system_vampir">Vampir</string>
    <string name="system_hiroshima">Hiroshima</string>
    <string name="system_monastyr">Monastyr</string>
    <string name="system_pathfinder">Pathfinder</string>
    <string name="system_cyberpunk">Cyberpunk</string>
    <string name="system_darkeye">The dark eye</string>
    <string name="system_default">-----------------------------------------</string>


    <!--Experience levels -->
    <string name="exp_1">What is RPG?</string>
    <string name="exp_2">It is not that hard</string>
    <string name="exp_3">Bring it on!</string>
    <string name="exp_4">I need a real challenge</string>
    <string name="exp_5">Where is that dragon to slay?</string>

    <!-- Shorter Experience levels-->
    <string name="exp_1_s">Newbie</string>
    <string name="exp_2_s">Rookie</string>
    <string name="exp_3_s">Regular</string>
    <string name="exp_4_s">Master</string>
    <string name="exp_5_s">Legend</string>

    <!-- Spinners headers -->
    <string name="header_game_systems">Choose game system</string>
    <string name="header_exp_levels_min">Choose min level</string>
    <string name="header_exp_levels_recommended">Choose recommended level</string>
    <string name="header_exp_levels">Choose level</string>
    <string name="header_players_needed">Choose players needed</string>
    <string name="player_rank_1">Creativity</string>
    <string name="player_rank_2">Behaviour</string>
    <string name="player_rank_3">Game feel</string>
    <string name="master_rank_1">Creativity</string>
    <string name="master_rank_2">Behaviour</string>
    <string name="master_rank_3">Game feel</string>

    <string name="event_detail_participator">Leave</string>
    <string name="document_participants">participants</string>
    <string name="document_voted_users">votedUsers</string>
    <string name="voted_on_master">You have voted on Game Master</string>
    <string name="vote_on_players">You have already voted on each player</string>

    <!-- Spinners arrays -->

    <string-array name="game_systems">
        <item>@string/header_game_systems</item>
        <item>@string/system_dnd</item>
        <item>@string/system_warhammer</item>
        <item>@string/system_vampir</item>
        <item>@string/system_hiroshima</item>
        <item>@string/system_monastyr</item>
        <item>@string/system_pathfinder</item>
        <item>@string/system_cyberpunk</item>
        <item>@string/system_darkeye</item>
    </string-array>


    <string-array name="exp_levels_min">
        <item>@string/header_exp_levels_min</item>
        <item>@string/exp_1</item>
        <item>@string/exp_2</item>
        <item>@string/exp_3</item>
        <item>@string/exp_4</item>
        <item>@string/exp_5</item>
    </string-array>

    <string-array name="exp_levels_rec">
        <item>@string/header_exp_levels_recommended</item>
        <item>@string/exp_1</item>
        <item>@string/exp_2</item>
        <item>@string/exp_3</item>
        <item>@string/exp_4</item>
        <item>@string/exp_5</item>
    </string-array>

    <string-array name="exp_levels_short">
        <item>@string/header_exp_levels</item>
        <item>@string/exp_1_s</item>
        <item>@string/exp_2_s</item>
        <item>@string/exp_3_s</item>
        <item>@string/exp_4_s</item>
        <item>@string/exp_5_s</item>
    </string-array>


    <!-- System descriptions -->
    <string name="lib_dnd">Before the game begins, each player creates their player character and records the details (described below) on a character sheet. First, a player determines their characters ability scores, which consist of Strength, Constitution, Dexterity, Intelligence, Wisdom, and Charisma. Each edition of the game has offered differing methods of determining these statistics.[34] The player then chooses a race (species) such as human or elf, a character class (occupation) such as fighter or wizard, an alignment (a moral and ethical outlook), and other features to round out the characters abilities and backstory, which have varied in nature through differing editions.</string>
    <string name="lib_warhammer">The Warhammer world drew inspiration from Tolkiens Middle-earth, but also from Robert E Howard (Conan the Barbarian) and Michael Moorcock, as well as history, particularly European history. What is recognizable as the Warhammer World began with the expansion material to the first edition of the game Warhammer, but was formulated as a distinct setting with a world map in the second edition. The Warhammer World borrowed considerably from historical events and other fantasy fiction settings. The Old World is recognisably Europe approximating to a variety of historical periods including the Renaissance - the Empire being set over what is modern Germany - medieval France, Roman Italy and Celtic Britain. Many events are lifted and modified directly from real-world history, including the Black Plague and the Moorish invasion of Spain, and others from original fantasy sources.</string>
    <string name="lib_vampir">Vampire Fantasy is known for its strong supernatural elements and undertones of blood, sex, and death. However, as the sub-genre has developed even these characteristics have changed. Beginning in the 20th century, depictions of vampires began to change—they became poetic heroes of tragedy. The genre has become fluid and can utilize techniques and elements of many other genres and sub-genres: Gothic Horror, Romance, Teen Romance, Crime Drama, Historical Fiction, Science Fiction, Thriller, and even the Comedy genre.</string>
    <string name="lib_hiroshima"></string>
    <string name="lib_monastyr">Monastyr is a Polish role-playing game set in a dark fantasy world of Dominium. Its setting features a fantastic equivalent of the Age of Enlightenment. Most often, the game plays in a cloak and dagger mood and involves plotting, intrigue, but also struggle in the name of honour. The game has been inspired by such authors as Alexandre Dumas, père, Michael Moorcock and H. P. Lovecraft. It is published by Wydawnictwo Portal (Portal Publishing House) and it is currently available only in Polish.</string>
    <string name="lib_pathfinder">The Pathfinder Roleplaying Game is a fantasy role-playing game (RPG) that was published in 2009 by Paizo Publishing. It extends and modifies the System Reference Document (SRD) based on the revised 3rd edition Dungeons  Dragons published by Wizards of the Coast under the Open Game License (OGL), and is intended to be backward-compatible with that edition.</string>
    <string name="lib_cyberpunk">The game tends to emphasize some aspects of the source material more than others. Much of the focus of the game is paid to combat, high-tech weaponry and cybernetic modification; however, performance-enhancing and recreational drug use is either played down or discouraged. Although artificial intelligence, genetic engineering, and cloning are barely mentioned in the core rulebook they are reintroduced in later add-ons such as the chromebook manuals.</string>
    <string name="lib_darkeye">The Dark Eye is set in the fantasy realm of Aventuria. During the 1990s, it was first translated as "Arkania", but the name was later changed to one closer to the original German name. Aventuria is a continent of the planet Ethra (an anagram of "Earth", as the planets name in the German edition, Dere, is an anagram of Erde, the German word for "Earth"). The other continents of Ethra are Myranor (also called "Gyldenland" in Aventuria), Uthuria and Vaestenland.</string>
</resources>
