<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/row_rank_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/face_placeholder"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/black"
            android:layout_toLeftOf="@id/row_rank_rank1" />

        <TextView
            android:id="@+id/row_rank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/row_rank_image"
            android:layout_alignStart="@id/row_rank_image"
            android:layout_alignEnd="@id/row_rank_image"
            android:textAlignment="center"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/player_rank_1"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/row_rank_rank1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_alignEnd="@id/text1"
            android:numStars="5"
            android:max="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_rank_2"
            android:textSize="14sp"
            android:layout_below="@id/row_rank_rank1"
            android:layout_alignEnd="@id/row_rank_rank1" />

        <RatingBar
            android:id="@+id/row_rank_rank2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_alignEnd="@id/text2"
            android:numStars="5"
            android:max="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_rank_3"
            android:textSize="14sp"
            android:layout_below="@id/row_rank_rank2"
            android:layout_alignEnd="@id/row_rank_rank2" />

        <RatingBar
            android:id="@+id/row_rank_rank3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:layout_alignEnd="@id/text3"
            android:numStars="5"
            android:max="5"
            android:stepSize="0.5" />

        <Button
            android:id="@+id/row_rank_vote_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vote"
            android:layout_alignTop="@id/row_rank_rank3"
            android:layout_alignBottom="@id/row_rank_rank3"
            android:layout_alignStart="@id/row_rank_name"
            android:layout_alignEnd="@id/row_rank_name"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="8dp" />


    </RelativeLayout>
</android.support.v7.widget.CardView>