<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@drawable/default_background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/login_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:fontFamily="monospace"
            app:layout_constraintStart_toStartOf="@+id/login_login_card"
            app:layout_constraintTop_toBottomOf="@+id/login_image" />

        <android.support.v7.widget.CardView
            android:id="@+id/login_login_card"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_login_text"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/login_login_input"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:layout_margin="2dp"
                android:textAlignment="center" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/login_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/password_text"
            android:fontFamily="monospace"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/login_password_card"
            app:layout_constraintTop_toBottomOf="@+id/login_login_card" />

        <android.support.v7.widget.CardView
            android:id="@+id/login_password_card"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_text"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <EditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:layout_margin="2dp"
                android:textAlignment="center" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/login_button_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="100dp"

            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_card">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/transparent"
                android:fontFamily="serif"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/login_button_register_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"

            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button_card">

            <Button
                android:id="@+id/login_register_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@android:color/transparent"
                android:fontFamily="serif"
                android:text="@string/login_register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="130dp"
            android:layout_height="112dp"
            android:layout_marginStart="167dp"
            android:layout_marginEnd="169dp"
            android:visibility="invisible"
            android:elevation="12dp"
            app:layout_constraintBottom_toTopOf="@+id/login_button_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_card"
            app:layout_constraintVertical_bias="1.0" />


    </android.support.constraint.ConstraintLayout>